--- a/src/components/Calculator/SWPCalculator/SWPCalculator.css
+++ b/src/components/Calculator/SWPCalculator/SWPCalculator.css
@@ -1,4 +1,4 @@
-.generic-calculator {
+.swp-calculator {
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
@@ -7,30 +7,30 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
   
-  .generic-calculator h1 {
+  .swp-calculator h1 {
     text-align: center;
     margin-bottom: 20px;
     color: #333;
   }
   
-  .generic-calculator .form-group {
+  .swp-calculator .form-group {
     margin-bottom: 15px;
   }
   
-  .generic-calculator label {
+  .swp-calculator label {
     display: block;
     margin-bottom: 5px;
     color: #777;
   }
   
-  .generic-calculator input {
+  .swp-calculator input {
     width: 100%;
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
   }
   
-  .generic-calculator button {
+  .swp-calculator button {
     width: 100%;
     padding: 10px;
     background-color: #4CAF50;
@@ -38,45 +38,35 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 16px;
   }
   
-  .generic-calculator button:hover {
-    background-color: #45a049;
-  }
-  
-  .generic-calculator .result {
-    margin-top: 20px;
+  .swp-calculator .result {
     text-align: center;
-  }
-  
-  .generic-calculator .result h2, .generic-calculator .result h3 {
-    color: #333;
-    margin-bottom: 10px;
-  }
-  
-  .generic-calculator .breakdown {
     margin-top: 20px;
   }
   
-  .generic-calculator table {
+  .swp-calculator .breakdown {
+    margin-top: 20px;
+  }
+  
+  .swp-calculator table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 10px;
   }
   
-  .generic-calculator table, .generic-calculator th, .generic-calculator td {
+  .swp-calculator table, .swp-calculator th, .swp-calculator td {
     border: 1px solid #ddd;
     padding: 8px;
   }
   
-  .generic-calculator th {
+  .swp-calculator th {
     background-color: #f2f2f2;
     text-align: center;
     color: #333;
   }
   
-  .generic-calculator td {
+  .swp-calculator td {
     text-align: center;
   }
   
