--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,10 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  padding-right: 10%;
+  padding-left: 10%;
+}
+canvas {
+  height: 500px !important;
+  width: 500px !important;
 }
