--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,8 @@ header {
     padding: 10px 20px;
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding-right: 10%;
+    padding-left: 10%;
 }
 
 .logo {
@@ -82,6 +84,8 @@ footer {
     background-color: #333;
     color: #fff;
     padding: 20px;
+    padding-right: 10%;
+    padding-left: 10%;
 }
 
 .footer-content {
