--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,24 +1,71 @@
-
 .header {
-    color: rgb(12, 0, 0);
-    padding: 10px 0;
-    text-align: center;
-    padding-right: 10%;
-    padding-left: 10%;
+  background-color: #333;
+  color: white;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header h1 {
+  color: white;
+  margin: 0;
+}
+
+.hamburger {
+  display: none;
+  font-size: 24px;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+.nav {
+  display: flex;
+}
+
+.nav ul {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  margin: 0;
+}
+
+.nav ul li {
+  margin-left: 15px;
+}
+
+.nav ul li a {
+  color: white;
+  text-decoration: none;
+}
+
+@media (max-width: 768px) {
+  .hamburger {
+    display: block;
   }
-  
-  .header nav ul {
-    list-style-type: none;
-    padding: 0;
+
+  .nav {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    right: 20px;
+    background-color: #333;
+    border-radius: 8px;
+    width: 200px;
   }
-  
-  .header nav ul li {
-    display: inline;
-    margin: 0 15px;
+
+  .nav.open {
+    display: flex;
   }
-  
-  .header nav ul li a {
-    color: rgb(0, 0, 0);
-    text-decoration: none;
+
+  .nav ul {
+    flex-direction: column;
   }
-  
+
+  .nav ul li {
+    margin: 10px 0;
+  }
+}
