--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -22,4 +22,13 @@
     text-decoration: none;
     color: #333;
   }
+  @media (max-width: 768px) {
+    .sidebar {
+      width: 100%;
+      padding: 10px;
+    }
   
+    .sidebar ul li {
+      margin-bottom: 5px;
+    }
+  }
