--- a/src/index.css
+++ b/src/index.css
@@ -121,3 +121,10 @@ canvas {
   padding: 0 20px;
   list-style-type: disc;
 }
+
+@media (max-width: 768px) {
+  canvas {
+    height: 300px !important;
+    width: 300px !important;
+  }
+}
